--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 
 # ? MongoDB Configuration
-spring.data.mongodb.uri=mongodb+srv://kaushaltopusa:imKaushal5699@cluster101.bm6x1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster101
+spring.data.mongodb.uri=mongodb+srv://XXXXX:XXXXXX@cluster101.bm6x1.mongodb.net/?retryWrites=true&w=majority&appName=XXXXXX
 spring.data.mongodb.database=MultiFactorAuth
 spring.data.mongodb.auto-index-creation=true
 
 # ? Redis Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password=imKaushal5699
+spring.data.redis.password=XXXXX
